# audioreach-audio-utils-stg

./: README.md  repolint.json
.github/workflows/: ci.yml  pre_merge_build.yml  qcom-preflight-checks.yml  qli-checkers.yml
audio-plugins/audio-plugin-headers/: Makefile.am  audio-plugin-headers.pc.in  configure.ac
audio-plugins/audio-plugin-headers/interface/: codec_plugin.h  codec_status.h
audio-plugins/dac_plugin/: Makefile.am  configure.ac  dac_plugin.pc.in
audio-plugins/dac_plugin/inc/: dac_plugin.h
audio-plugins/dac_plugin/src/: dac_plugin.c
audio-plugins/mercury_plugin/: Makefile.am  configure.ac  mercury_plugin.pc.in
audio-plugins/mercury_plugin/inc/: mercury_plugin.h
audio-plugins/mercury_plugin/src/: mercury_plugin.c
audio-plugins/test/dac_mer_test/: Makefile.am  configure.ac  dac_mer_testapp.c  dac_mer_testapp.h
audio-route/: Makefile.am  audio_route.c  audioroute.pc.in  configure.ac
audio-route/include/system/: audio.h
ci/: build.sh  files_to_copy.sh
