pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = audio-plugin-headers.pc
EXTRA_DIST = $(pkgconfig_DATA)

h_sources = ${top_srcdir}/interface/codec_plugin.h \
            ${top_srcdir}/interface/codec_status.h

library_includedir = $(includedir)/interface
library_include_HEADERS = $(h_sources)